# n42c-landing-page

./: .gitignore  Cargo.toml
src/: main.rs
static/: index.html  robots.txt  sitemap.xml
static/articles/: aube-noire.js  campagne-kickstarter-lancee.js  chris-crawfords-lecture-at-the-fipa.js  entretien-avec-thierry-arbogast.js  instants-de-jeu.js  la-desindustrialisation-une-chance-a-saisir.js  la-fin-des-cours-dhistoire.js  le-cheval-de-troie.js  le-donationware-en-france.js  refuge.js  the-dragon-speech-vf.js  thedragonspeech.js
static/css/: style.css
static/js/: main.js  navigation.js  router.js  td.js  translation.js
static/pages/: 404.js  about.js  blog.js  home.js  portfolio.js  projects.js
