[package]
name = "n42c-landing-page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-service = "2.0.2"
mime = "0.3.16"
mime_guess = "2.0.4"
env_logger = "0.10.0"
futures = "0.3.27"
futures-util = "0.3.27"

[build]
target = "x86_64-unknown-linux-gnu"

[target.x86_64-unknown-linux-gnu]
linker = "lld-link"
